# project2cop3530

./: README.md  goal.txt
flightpathproject/: README.md
flightpathproject/src/: CMakeLists.txt  main.cpp
